--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -4,3 +4,5 @@ flutter_launcher_icons:
   remove_alpha_ios: true
   image_path: "assets/images/logo-big.png"
   min_sdk_android: 21
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/logo-big.png"
