--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flutter_bloc: ^8.1.1
+  flutter_bloc: ^9.1.0
   cupertino_icons: ^1.0.2
   camera: ^0.10.0+1
   video_player: ^2.4.7
@@ -91,7 +91,7 @@ dependencies:
   image_picker: ^1.0.7
   qr_code_scanner_plus: ^2.0.10+1
   sidebarx: ^0.17.1
-  time_picker_spinner_pop_up: ^2.0.0
+  omni_datetime_picker: ^2.1.1
   textfield_datepicker: ^0.2.0
   table_calendar: ^3.1.2
   flutter_webrtc: ^0.12.4
